@@ -1,0 +1,5 @@
+appliedkernels="2.6.31"
+patchversion="${appliedkernels}-bfs211"
+source="${appliedkernels}-sched-bfs-211.patch"
+source_url="http://ck.kolivas.org/patches/bfs/${source}"
+md5sum="34afc1fe5f7ed87c70835f21265cfe51"
