@@ -1,3 +1,6 @@
+2009-09-11 Ladislav Hagara <hgr@vabo.cz>
+	* info/patches/ck_bfs/2.6.31-sched-bfs-211.patch: added
+
 2009-09-10 Eric Sandall <sandalle@sourcemage.org>
 	* info/patches/smgl_patches/smgl-logo-0.2-for-2.6.22.patch: Support 2.6.30
 	* info/patches/smgl_patches/smgl-logo-0.2-for-2.6.31.patch: SMGL Logo 0.2
